--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,17 @@
 
 {% block content %}
 <body>
+  <div class="header" style="display: flex;
+    align-items: center;
+    justify-content: center;">
+        <p>
+            {% if user_name %}
+                Hello, {{ user_name }} <a href="/logout">Logout</a>
+            {% else %}
+                You are not logged in. Please<a href="/login">Login</a> or<a href="/register">Register</a>.
+            {% endif %}
+        </p>
+    </div>
    <div class="container-card">
     <!-- card -->
     <p style="color: #111111">Find your shoe model !</p>
